objects/Opportunity_Part__c.object
<CustomObject>
    <description>This custom object is used instead of standard opportunity product to link products to an opportunity.</description>
    <fields>
        <fullName>ADM_Average_Sales_Price__c</fullName>
        <description>This field corresponds to Unit Price field present on Opporunity Product in ADM</description>
        <label>ADM Average Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADM_Competitor_Shipset_Amt__c</fullName>
        <formula>IF(
( ISPICKVAL( Status__c  ,&quot;Won&quot;) || ISPICKVAL( Status__c  ,&quot;Lost&quot;) ),
( ADM_Total_Product_SS_Amt__c  * (1- ADM_TE_Shipset_Percentage__c ) ), 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ADM Competitor Shipset Amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADM_Full_Rate_Product_Annual_Quantity__c</fullName>
        <description>This field is used to store the number of end units to be produced annually when fully ramped up from ADM</description>
        <inlineHelpText>The number of end units to be produced annually when fully ramped up. That is, the number of shipsets NOT the total quantity of parts.</inlineHelpText>
        <label>ADM Full Rate Product Annual Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADM_Product_Annualized_Amt__c</fullName>
        <formula>ADM_Full_Rate_Product_Annual_Quantity__c  *  ADM_Total_Product_SS_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ADM Product Annualized Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADM_Product_Business_Unit__c</fullName>
        <formula>GPL__r.CBC2_Description__c+&apos; - &apos;+  GPL__r.CBC3_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADM_Product_CBC4_Description__c</fullName>
        <formula>GPL__r.CBC4_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ADM Product CBC4 Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADM_Shipset_Quantity__c</fullName>
        <description>This field was created corresponding to Quantity fields of ADM on Opportunity Product</description>
        <inlineHelpText>Enter the quantity of each part number per ship set (end unit to be produced)</inlineHelpText>
        <label>ADM Shipset Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADM_TE_Oppty_SS_Amt__c</fullName>
        <formula>IF( 
( ISPICKVAL(   Status__c  ,&quot;Discussion&quot;) || ISPICKVAL( Status__c,&quot;Design&quot;) || ISPICKVAL( Status__c,&quot;Test&quot;) ), 
( ADM_Shipset_Quantity__c * ADM_Average_Sales_Price__c ), 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ADM TE Oppty SS Amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADM_TE_Shipset_Amt__c</fullName>
        <description>This is a formula field which calculates total product SS Amt to shipset Percentage</description>
        <formula>IF(
( ISPICKVAL( Status__c  ,&quot;Won&quot;) || ISPICKVAL( Status__c  ,&quot;Lost&quot;) ),
( ADM_Total_Product_SS_Amt__c   * ADM_TE_Shipset_Percentage__c ),
0
)</formula>
        <label>ADM TE Shipset Amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADM_TE_Shipset_Percentage__c</fullName>
        <description>This field was created to hold values of the field TE Shipset Percentage which is in ADM</description>
        <inlineHelpText>Enter the Shipset percentage (in whole numbers) that TE has won for this product. Required when the Opportunity Part is Won.</inlineHelpText>
        <label>ADM TE Shipset Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADM_Total_Product_SS_Amt__c</fullName>
        <formula>ADM_Shipset_Quantity__c   *  ADM_Average_Sales_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ADM Total Product SS Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ANZ_Customer_Number__c</fullName>
        <formula>Opportunity__r.Account.Company_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ANZ Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANZ_Item_Id__c</fullName>
        <label>ANZ Item Id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANZ_Percentage__c</fullName>
        <label>ANZ Percentage</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANZ_Quantity__c</fullName>
        <label>ANZ Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APL_Active_Pipeline__c</fullName>
        <formula>IF(
     OR(
	AND(
	     OR(CONTAINS(BU_profit_center__c, &apos;Appliance&apos;),CONTAINS(Opportunity__r.Owner.Profile.Name, &apos;Appliance&apos;)),
	     Opportunity__r.RecordType.DeveloperName &lt;&gt; &apos;Lost_Business_Appliances&apos;, 
	     Opportunity__r.RecordType.DeveloperName &lt;&gt; &apos;Opportunity_Product_Platform&apos;, 
	     Opportunity__r.RecordType.DeveloperName &lt;&gt; &apos;Program&apos;, 
	     Opportunity__r.RecordType.DeveloperName &lt;&gt; &apos;TAM&apos;, 
	     
	     OR(
		   AND(
			NOT(ISBLANK( Won_Date__c )),
			Won_Date__c &gt;= $Setup.APL_Fiscal_Year_Setting__c.first_day__c ,
                        Won_Date__c &lt;= $Setup.APL_Fiscal_Year_Setting__c.last_day__c ,
                        ISPICKVAL(Process_Status__c,&apos;Production&apos;),
                        ISPICKVAL(Status__c,&apos;Won&apos;) 
		   ),

		   AND(
			OR(
				ISPICKVAL(Status__c,&apos;Weak&apos;),
				ISPICKVAL(Status__c,&apos;50/50&apos;),
				ISPICKVAL(Status__c,&apos;Likely&apos;),
				ISPICKVAL(Status__c,&apos;Commit&apos;),
				AND(
					ISPICKVAL(Status__c,&apos;Won&apos;),
					ISPICKVAL(Process_Status__c,&apos;Pre-prod&apos;)

				)
			),
			Opportunity__r.Days_since_last_user_update__c &lt;= 60
		   ),

                   AND(
			OR(
				ISPICKVAL(Status__c,&apos;Weak&apos;),
				ISPICKVAL(Status__c,&apos;50/50&apos;),
				ISPICKVAL(Status__c,&apos;Likely&apos;),
				ISPICKVAL(Status__c,&apos;Commit&apos;),
				AND(
					ISPICKVAL(Status__c,&apos;Won&apos;),
					ISPICKVAL(Process_Status__c,&apos;Pre-prod&apos;)

				)
			),
			Opportunity__r.Days_since_last_user_update__c &gt; 60,
                        ISPICKVAL(Opportunity__r.StageName,&apos;In Approval&apos;) 
		   )
	     ) 
	),
        AND(
            CONTAINS(BU_profit_center__c, &apos;Appliance&apos;),
            OR (Opportunity__r.RecordType.DeveloperName = &apos;NDR_Opportunity&apos;, 
                Opportunity__r.RecordType.DeveloperName = &apos;CCR_Opportunity&apos;), 
            OR(
		  ISPICKVAL(Status__c,&apos;Weak&apos;),
		  ISPICKVAL(Status__c,&apos;50/50&apos;),
		  ISPICKVAL(Status__c,&apos;Likely&apos;),
		  ISPICKVAL(Status__c,&apos;Commit&apos;),
		  AND(
			  ISPICKVAL(Status__c,&apos;Won&apos;),
			  ISPICKVAL(Process_Status__c,&apos;Pre-prod&apos;)

		  ),
                  AND(
			NOT(ISBLANK( Won_Date__c )),
			Won_Date__c &gt;= $Setup.APL_Fiscal_Year_Setting__c.first_day__c ,
                        Won_Date__c &lt;= $Setup.APL_Fiscal_Year_Setting__c.last_day__c ,
                        ISPICKVAL(Process_Status__c,&apos;Production&apos;),
                        ISPICKVAL(Status__c,&apos;Won&apos;) 
		   )
	    ),Opportunity__r.Days_since_last_user_update__c &lt;= 90
        )
    ),
    &apos;YES&apos;,
    &apos;NO&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APL Active Pipeline</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APL_Forecast_Calculation_Start_Date__c</fullName>
        <formula>IF( 
	OR(ISBLANK(Part__c),ISNULL(Part__c)) ,  
	IF(
			NOT(ISNULL( Initial_Billing_Date__c )),
			Initial_Billing_Date__c, 
			Initial_Order_Date__c
		), 
	IF(
		NOT(ISNULL( Part__r.Market_Date__c )),
		Part__r.Market_Date__c, 
		DATE(2009,1,1) 
	)
)</formula>
        <label>APL Forecast Calculation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APL_need_to_capture_billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APL need to capture billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APL_need_to_delete_captured_billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APL need to delete captured billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Combined_Cata__c</fullName>
        <formula>Opportunity__r.Account.Account_Combined_Data__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account (Combined Data)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_IBC_code__c</fullName>
        <formula>Opportunity__r.Account.INDUSTRY_BUSINESS_CDE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account IBC code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Description_REL_FAE_only__c</fullName>
        <description>Action Description for Relay Application Engineers</description>
        <inlineHelpText>Action Description for Relay Application Engineers</inlineHelpText>
        <label>Action Description (REL FAE only)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Needed</fullName>
                </value>
                <value>
                    <fullName>Needed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_Customer_Drawings_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sometimes customers are sending drawings, what the part should look like</description>
        <label>Are Customer Drawings Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <description>Provided by the SAP integration</description>
        <label>Availability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_for_TAM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available for TAM?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AverageSellPrice__c</fullName>
        <formula>Part__r.Standard_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Price (Average Sell Price)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Cost_OP__c</fullName>
        <description>The average cost.</description>
        <formula>Part__r.Avg_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Margin_OP__c</fullName>
        <description>The average margin.</description>
        <formula>Part__r.Avg_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Awarded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Awarded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BU_profit_center__c</fullName>
        <description>used to calculate the BU profit center which will receive the profit for the opportunity.</description>
        <label>BU profit center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Quantity__c</fullName>
        <label>Build Quantity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>the business unit of the account the opp is linked to, used in interest tags</description>
        <formula>TEXT(Opportunity__r.Account.Industry_Code_Description__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC2_Code__c</fullName>
        <formula>GPL__r.CBC2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC2 Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC3_Description__c</fullName>
        <formula>GPL__r.CBC3_Description__c</formula>
        <label>CBC3 Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC5_Code__c</fullName>
        <formula>GPL__r.CBC5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC5 code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC_1_Code__c</fullName>
        <formula>GPL__r.CBC1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC 1 Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC_1_Name__c</fullName>
        <formula>GPL__r.CBC1_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC 1 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC_2_Name__c</fullName>
        <formula>GPL__r.CBC2_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC 2 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC_3_Code__c</fullName>
        <formula>GPL__r.CBC3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC 3 Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC_5_Description__c</fullName>
        <formula>GPL__r.CBC5_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC 5 Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Part_Number__c</fullName>
        <label>CM Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSD_GPL_Family__c</fullName>
        <formula>IF(NOT(ISBLANK( GPL__c )), GPL__r.CSD_GPL_Family__c, IF(NOT(ISBLANK( Part_Number__c )),Part__r.CSD_GPL_Family__c, GPL__r.CSD_GPL_Family__c))</formula>
        <label>CSD GPL Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cable_Assembly_Type__c</fullName>
        <label>Cable Assembly Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fiber Optic</fullName>
                </value>
                <value>
                    <fullName>Non-Fiber Optic</fullName>
                    <default>true</default>
                    <label>Non-Fiber Optic</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certification_Requirements__c</fullName>
        <inlineHelpText>Please choose the required certifications for this part.</inlineHelpText>
        <label>Certification Requirements</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VDE</fullName>
                </value>
                <value>
                    <fullName>UL</fullName>
                </value>
                <value>
                    <fullName>CSA</fullName>
                </value>
                <value>
                    <fullName>VDA</fullName>
                </value>
                <value>
                    <fullName>TUV</fullName>
                </value>
                <value>
                    <fullName>JET</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Part_Number__c</fullName>
        <description>If this value is set and is different from the Part__r.name value then update the part lookup to point to the TE part named in this field (and then delete the value in this field)</description>
        <label>Change Part Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_Since_Quote_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field on all OppParts should always be set to FALSE when the Opportunity.Quote_Created_time__c is updated.</description>
        <label>Changed Since Quote Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_Migration__c</fullName>
        <formula>Opportunity__r.Channel_Migration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_Part_ID__c</fullName>
        <description>Created for Migration,
WIll be deleted later</description>
        <label>Channel Part ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Unit_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Unit Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_out_date__c</fullName>
        <description>This date field is for Relay AE´s only and shows the expected date, when the opportunity part will be technical solved</description>
        <inlineHelpText>This date field is for Relay AE´s only and shows the expected date, when the opportunity part will be technical solved</inlineHelpText>
        <label>Close out date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Code_for_unit_of_measurement__c</fullName>
        <inlineHelpText>Select Code for unit measurement</inlineHelpText>
        <label>Code for unit of measurement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BAG</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BX</fullName>
                </value>
                <value>
                    <fullName>BX1</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>CM2</fullName>
                </value>
                <value>
                    <fullName>CM3</fullName>
                </value>
                <value>
                    <fullName>DAY</fullName>
                </value>
                <value>
                    <fullName>DM</fullName>
                </value>
                <value>
                    <fullName>DK</fullName>
                </value>
                <value>
                    <fullName>DZ</fullName>
                </value>
                <value>
                    <fullName>EA</fullName>
                </value>
                <value>
                    <fullName>FT</fullName>
                </value>
                <value>
                    <fullName>FT2</fullName>
                </value>
                <value>
                    <fullName>FT3</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>GAL</fullName>
                </value>
                <value>
                    <fullName>GL</fullName>
                </value>
                <value>
                    <fullName>GM</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IN2</fullName>
                </value>
                <value>
                    <fullName>IN3</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
                <value>
                    <fullName>KM</fullName>
                </value>
                <value>
                    <fullName>KPC</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>LB</fullName>
                </value>
                <value>
                    <fullName>LR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Comments about this Part for this Opportunity.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Competitor_Price__c</fullName>
        <label>Competitor Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Competitor_Share__c</fullName>
        <formula>1 - TE_Market_Share__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a lookup to accounts of type &quot;Competitor&quot;. It will be required in case a Part is lost against an Competitor.</description>
        <label>Competitor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Parts</relationshipLabel>
        <relationshipName>Opportunity_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confidence_Percentage_APL__c</fullName>
        <description>Used by APL to caculate Weighted value</description>
        <formula>CASE(Status__c,
	&quot;Lost&quot;, 0, 
	&quot;On Hold&quot;, 0,
	&quot;Dead&quot;, 0, 
	&quot;Weak&quot;, 0.25, 
	&quot;50/50&quot;, 0.5, 
	&quot;Likely&quot;, 0.75,
	&quot;Commit&quot;, 0.9,
	&quot;Won&quot;, 1, 
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used by APL to caculate Weighted value</inlineHelpText>
        <label>Confidence Percentage APL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Confidence_Percentage__c</fullName>
        <formula>CASE(Status__c,
	&quot;Lost&quot;, 0, 
	&quot;On Hold&quot;, 0,
	&quot;Dead&quot;, 0, 
	&quot;Weak&quot;, 0.2, 
	&quot;50/50&quot;, 0.5, 
	&quot;Likely&quot;, 0.75,
	&quot;Commit&quot;, 0.9,
	&quot;Won&quot;, 1, 
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confidence Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract_Sfty_Stk_Qty__c</fullName>
        <label>Contract Sfty Stk Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Price__c</fullName>
        <label>Cost Price</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Set_3__c</fullName>
        <label>Cost Set 3</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Set_75__c</fullName>
        <label>Cost Set 75</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country_of_Origin__c</fullName>
        <label>Country of Origin</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_After_Push_to_PLM__c</fullName>
        <description>Field calculates if record was created before (false) or after (true) the time the project was pushed to PLM initially.</description>
        <formula>IF(CreatedDate &gt; Opportunity__r.Last_PLM_Integration_Date__c, &apos;true&apos;, &apos;false&apos;)</formula>
        <inlineHelpText>Push to PLM date comes from referenced opportunity field Last_PLM_Integration_Date__c</inlineHelpText>
        <label>Created After Push to PLM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Curr_CS_75__c</fullName>
        <label>Curr CS 75</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Year_1_MSG1__c</fullName>
        <label>Current Year + 1 MSG1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_1_MSG2__c</fullName>
        <label>Current Year + 1 MSG2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_1_MSG3__c</fullName>
        <label>Current Year + 1 MSG3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_1_NPS1__c</fullName>
        <label>Current Year + 1 NPS1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_1_NPS2__c</fullName>
        <label>Current Year + 1 NPS2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_1_NPS3__c</fullName>
        <label>Current Year + 1 NPS3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_1_New_Business__c</fullName>
        <formula>Current_Year_add_1__c * Opportunity__r.New_Business_Percentage_Numberical__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year + 1 New Business</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_1_Weighted_Value__c</fullName>
        <description>Used by APL to caculate Weighted value</description>
        <formula>Current_Year_add_1__c  *  Confidence_Percentage_APL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year + 1 Weighted Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_2_Weighted_Value__c</fullName>
        <description>Used by APL to caculate Weighted value</description>
        <formula>Current_Year_add_2__c  *  Confidence_Percentage_APL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year + 2 Weighted Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_3_Weighted_Value__c</fullName>
        <formula>Current_Year_add_3__c  *  Confidence_Percentage_APL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year + 3 Weighted Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_MSG1__c</fullName>
        <label>Current Year MSG1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_MSG2__c</fullName>
        <label>Current Year MSG2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_MSG3__c</fullName>
        <label>Current Year MSG3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_NPS1__c</fullName>
        <label>Current Year NPS1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_NPS2__c</fullName>
        <label>Current Year NPS2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_NPS3__c</fullName>
        <label>Current Year NPS3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_New_Business__c</fullName>
        <formula>Current_Year__c * Opportunity__r.New_Business_Percentage_Numberical__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year New Business</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_PRICE__c</fullName>
        <label>Current Year PRICE</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_QTY__c</fullName>
        <label>Current Year QTY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_Weighted_Value__c</fullName>
        <description>Used by APL to display weighted yearly value</description>
        <formula>Current_Year__c  *  Confidence_Percentage_APL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year Weighted Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <description>to save the us-amount from forecasts of current fiscal year</description>
        <label>Current Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_add_1_PRICE__c</fullName>
        <label>Current Year + 1 PRICE</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_add_1_QTY__c</fullName>
        <label>Current Year + 1 QTY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_add_1__c</fullName>
        <description>to save the us-amount from forecasts of current fiscal year + 1</description>
        <label>Current Year + 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_add_2_PRICE__c</fullName>
        <label>Current Year + 2 PRICE</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_add_2_QTY__c</fullName>
        <label>Current Year + 2 QTY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_add_2__c</fullName>
        <description>to save the us-amount from forecasts of current fiscal year + 2</description>
        <label>Current Year + 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>